# integral

./: .gitignore  CMakeLists.txt  integral.sln
integral/: CMakeLists.txt  Source.cpp  integral.sln  integral.vcxproj
integral/integral/: integral.vcxproj
integral_lib/: CMakeLists.txt  cr.cpp  cr.h  f.cpp  integral_lib.vcxproj  integral_lib.vcxproj.filters  is.cpp  is.h  trap.cpp  trap.h
tests/: test.cpp  tests.vcxproj
